Fixing project banner overlap

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -172,7 +172,7 @@ section {
   }
 
   &.project {
-    padding-bottom: 400px;
+    padding-bottom: 40vw;
     p {
       color: white;
     }
@@ -187,7 +187,7 @@ section {
   width: clamp(150px, 85vw, 1200px);
   margin: 0 auto;
   display: flex;
-  margin-top: -350px !important;
+  margin-top: -35vh !important;
 }
 
 // LAYOUTS
